--- a/src/main/resources/templates/Operador/domicilio.html
+++ b/src/main/resources/templates/Operador/domicilio.html
@@ -33,8 +33,8 @@
 			 <i class='bx bxs-truck'></i> <span
 					class="links_name">Domicilios</span>
 			</a></li>
-	<li><a href="agregarproducto.html"
-	th:href="@{agregarproducto}"> <i class='bx bxs-cart-alt' ></i> <span
+	<li><a 
+	th:href="@{/listar7}"> <i class='bx bxs-cart-alt' ></i> <span
 					class="links_name">Agregar Producto</span>
 			</a></li>
 			
@@ -42,8 +42,8 @@
 			th:href="@{informe}"> <i class='bx bx-columns' ></i> <span
 					class="links_name">informe</span>
 			</a></li>
-			<li><a href="asignarrepartidor.html"
-			 th:href="@{asignarrepartidor}"><i class='bx bxs-user-plus'></i> <span
+			<li><a 
+			 th:href="@{/operadores}"><i class='bx bxs-user-plus'></i> <span
 					class="links_name">Asignar Repartidor</span>
 			</a></li>
 			
