--- a/src/main/resources/templates/crear_domicilio.html
+++ b/src/main/resources/templates/crear_domicilio.html
@@ -26,7 +26,7 @@
 		<ul class="nav-links">
 		
 			
-			<li><a href="#" class="active"> <i class='bx bx-home' ></i><span
+			<li><a th:href="@{/index}" > <i class='bx bx-home' ></i><span
 					class="links_name">Inicio</span>
 			</a></li>
 			<li><a href="listar2.html" th:href="@{/listar2}"><i class='bx bx-male'></i> <span
@@ -35,18 +35,18 @@
 			<li><a  th:href="@{/listar3}"> <i class='bx bx-female' ></i><span
 					class="links_name">Dama</span>
 			</a></li>
-			<li><a th:href="@{/listar4}"> <i class='bx bx-football' ></i><span
+			<li><a  th:href="@{/listar4}"> <i class='bx bx-football' ></i><span
 					class="links_name">Niño</span>
 			</a></li>
-			<li><a  th:href="@{/listar5}"> <i class='bx bxs-star'></i> <span
+			<li><a th:href="@{/listar5}"> <i class='bx bxs-star'></i> <span
 					class="links_name">Niña</span>
 			</a></li>
 		
 	
-			<li><a  th:href="@{/domicilios}"> <i class='bx bx-archive' ></i><span
+			<li><a  th:href="@{/domicilios}" class="active"> <i class='bx bx-archive' ></i><span
 					class="links_name">Compras</span>
 			</a></li>
-			<li class="log_out"
+		<li class="log_out"
 				th:onclick="return confirm('¿Seguro de que quieres salir?');"><a
 				th:href="@{/logout}"> <i class='bx bx-log-out'></i> <span
 					class="links_name" data-toggle="modal" data-target="#exampleModal">Salir</span>
@@ -70,42 +70,39 @@
 
 		<div class="home-content">
 			<div class="overview-boxes">
-				<div class="home-content">
-			<div class="overview-boxes">
-				<div class="col-md-11">
-
-					<div class="container">
-
-
-						<div class="row">
-							<div class="card-body col-7 ">
-								
-								<h1 class="display-4">Bienvenido a Innovatech</h1>
-								<p class="lead">Nos alegra tenerte aqui. Innovatech tiene un
-									linda comunidad y apasionada, lista para ver todas las cosas
-									que te gustan, esperamos que lo disfrutes.</p>
-									
-								
-							</div>
-							
-							
-							<div class="car-body col-5">
-								<img  style="width:100%; height: 80%"
-									src="static/img/jeans.png" class="img-fluid"
-									th:src="@{/img/jeans.png}" />
-							</div>
-
-
-							<p></p>
-							
-						</div>
-					</div>
-	
-				</div>
-
-			</div>
-
-		</div>
+			 <div class="container">
+       <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
+              <h1 class="text-center">Ingresa los datos para realizar la compra</h1>
+              <div class="card-body">
+                 <form th:action="@{/domicilios}" th:object="${domicilio}" method="POST">
+                    <div class="form-group">
+                       <label>Nombre : </label>
+                       <input type="text" name="nombre" th:field="*{nombre}" class="form-control" placeholder="Digite su nombre : " required>
+                    </div>
+                    
+                    <div class="form-group">
+                       <label>Apellido : </label>
+                       <input type="text" name="apellido" th:field="*{apellido}" class="form-control" placeholder="Digite su apellido : " required>
+                    </div>
+                    
+                    <div class="form-group">
+                       <label>Direccion : </label>
+                       <input type="text" name="direccion" th:field="*{direccion}" class="form-control" placeholder="Digite su direccion : " required>
+                    </div>
+                        <div class="form-group">
+                       <label>Numero de telefono : </label>
+                       <input type="number" name="Numero" th:field="*{numero}" class="form-control" placeholder="Digite su numero : " required>
+                    </div>
+                
+                    <div class="box-footer" th:onclick="return confirm('¿Estas seguro de realizar este pedido?');">
+                       <button class="btn btn-success">Guardar</button>
+                    </div>
+                 </form>
+              </div>
+          </div>
+       </div>
+    </div>
 					</div>
 				</div>
 	</section>
