--- a/src/main/resources/templates/domicilios3.html
+++ b/src/main/resources/templates/domicilios3.html
@@ -15,37 +15,35 @@
 <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'
 	rel='stylesheet'>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="static/css/index.css"
-	th:href="@{/css/index.css}">
+<link rel="stylesheet" type="text/css" href="static/css/operador.css"
+	th:href="@{/css/operador.css}">
 </head>
 <body>
 	<div class="sidebar">
 		<div class="logo-details">
-			<i class='bx bx-bar-chart-square'></i> <span class="logo_name">Innovatech</span>
+			<i class='bx bxs-user' ></i> <span class="logo_name">Innovatech</span>
 		</div>
 		<ul class="nav-links">
 		
-			
-			<li><a href="/index.html" th:href="@{/index}" > <i class='bx bx-home' ></i> <span
+		<li><a th:href="@{/Operador/dashboard}"  > <i class='bx bx-home' ></i> <span
 					class="links_name">Inicio</span>
 			</a></li>
-			<li><a href="caballero.html" th:href="@{caballero}" ><i class='bx bx-male'></i> <span
-					class="links_name">Caballero</span>
+			
+			<li><a href="#" class="active">
+			 <i class='bx bxs-truck'></i> <span
+					class="links_name">Domicilios</span>
 			</a></li>
-			<li><a href="#" class="active"> <i class='bx bx-female' ></i><span
-					class="links_name">Dama</span>
+	<li><a 
+	th:href="@{/listar7}"> <i class='bx bxs-cart-alt' ></i> <span
+					class="links_name">Agregar Producto</span>
 			</a></li>
-			<li><a href="niño.html" th:href="@{niño}"> <i class='bx bx-football' ></i><span
-					class="links_name">Niño</span>
+			
+			
+			<li><a 
+			 th:href="@{/operadores}"><i class='bx bxs-user-plus'></i> <span
+					class="links_name">Asignar Repartidor</span>
 			</a></li>
-			<li><a href="niña.html" th:href="@{niña}"> <i class='bx bxs-star'></i> <span
-					class="links_name">Niña</span>
-			</a></li>
-		
-	
-			<li><a href="compras.html" th:href="@{compras}" > <i class='bx bx-archive' ></i><span
-					class="links_name">Compras</span>
-			</a></li>
+			
 			<li class="log_out"><a th:href="@{/logout}"> <i
 					class='bx bx-log-out'></i> <span class="links_name"
 					data-toggle="modal" data-target="#exampleModal">Salir</span>
@@ -62,14 +60,49 @@
 					th:src="@{/img/logo.png}" />
 			</div>
 
-			<div class="profile-details">
 			
-			</div>
 		</nav>
 
 		<div class="home-content">
 			<div class="overview-boxes">
-				 	<h2>Contenido dama</h2>
+			<div>
+<a  th:href="@{/domicilios3/nuevo}" class="btn btn-primary btn-sm mb3">Agregar operador</a>
+</div>
+				 	<table class="table table-striped table-bordered mt-3">
+				 	
+			<thead class="table-dark">
+				<tr>
+					<th>Nombre</th>
+					<th>Apellido</th>
+					<th>Direccion</th>
+					<th>Numero</th>
+					<th>Editar</th>
+					<th>Eliminar</th>
+					
+				
+				</tr>
+			</thead>
+		<tbody>
+				<tr th:each="empleado : ${domicilios}">
+					<td th:text="${empleado.nombre}">Nombre</td>
+					<td th:text="${empleado.apellido}">Apellido</td>
+					<td th:text="${empleado.direccion}">Direccion</td>
+					<td th:text="${empleado.numero}">numero</td>
+				
+				<td sec:authorize="hasRole('OPERADOR')">
+				<a class="btn btn-warning btn-sm" th:href="@{/domicilios3/editar/{id}(id=${empleado.id})}">Editar</a></td>
+				<td sec:authorize="hasRole('OPERADOR')">
+				<a class="btn btn-danger btn-sm" th:href="@{/domicilios3/{id}(id=${empleado.id})}">Eliminar</a></td>
+					<td>
+			
+			
+					  
+					  
+					</td>
+				</tr>
+				
+			</tbody>
+		</table>
 					</div>
 				</div>
 	</section>
