--- a/src/main/resources/templates/listar7.html
+++ b/src/main/resources/templates/listar7.html
@@ -25,30 +25,29 @@
 		</div>
 		<ul class="nav-links">
 		
-		<li><a href="#" class="active" > <i class='bx bx-home' ></i> <span
+		<li><a th:href="@{/Operador/dashboard}"  > <i class='bx bx-home' ></i> <span
 					class="links_name">Inicio</span>
 			</a></li>
 			
-			<li><a
+		<li><a
 	th:href="@{/domicilios3}"> <i class='bx bxs-truck'></i> <span
 					class="links_name">Domicilios</span>
 			</a></li>
 			
-			<li><a  
-			 th:href="@{/listar7}"> <i class='bx bxs-cart-alt' ></i> <span
+			<li><a 
+			 th:href="@{#}" class="active"> <i class='bx bxs-cart-alt' ></i> <span
 					class="links_name">Agregar Producto</span>
 			</a></li>
 			
-		
+			
 			<li><a href="asignarrepartidor.html"
 			 th:href="@{/operadores}"><i class='bx bxs-user-plus'></i> <span
 					class="links_name">Asignar Repartidor</span>
 			</a></li>
 			
-			<li class="log_out"
-				th:onclick="return confirm('¿Seguro de que quieres salir?');"><a
-				th:href="@{/logout}"> <i class='bx bx-log-out'></i> <span
-					class="links_name" data-toggle="modal" data-target="#exampleModal">Salir</span>
+			<li class="log_out"><a th:href="@{/logout}"> <i
+					class='bx bx-log-out'></i> <span class="links_name"
+					data-toggle="modal" data-target="#exampleModal">Salir</span>
 
 
 
@@ -69,40 +68,59 @@
 
 		<div class="home-content">
 			<div class="overview-boxes">
-				 <div class="home-content">
-			<div class="overview-boxes">
-				 	<div class="col-md-9">
-				<div class="row">
-					<div class="col">
-						
-						
-						<div class="row">
-							<div class="col">
+			<div class="container">
+		<div class="row">
+	
+		</div>
+		
+		<br>
+		<table class="table table-striped table-bordered">
+			<thead class="table-dark">
+				<tr>
+										<th>ID</th>
+										<th>Proveedor</th>
+										<th>Nombre</th>
+										<th>Marca</th>
 
-								<div class="jumbotron">
-									<h1 class="display-4">Bienvenido señor operario</h1>
-									<p class="lead">Dime que quieres hacer en el dia de hoy </p>
-									<hr class="my-4"/>
-									<p></p>
-                         <div class="car-body col-12">
-								<img  style="width:100%; height:100%"
-									src="static/img/feliz.png" class="img-fluid"
-									th:src="@{/img/feliz.png}" />
-							</div>
-								</div>
+										<th>Fecha</th>
+										<th>Stock</th>
+										<th>Estado</th>
+										<th>Precio</th>
+										<th>Detalles</th>
+										<th sec:authorize="hasRole('OPERADOR')">Editar</th>
+										<th sec:authorize="hasRole('OPERADOR')">Eliminar</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr th:each="empleado : ${empleados}">
+										<td th:text="${empleado.id}"></td>
+										<td th:text="${empleado.email}"></td>
+										<td th:text="${empleado.nombre}"></td>
+										<td th:text="${empleado.apellido}"></td>
 
-							</div>
-
+										<td th:text="${empleado.fecha}"></td>
+										<td th:text="${empleado.telefono}"></td>
+										<td th:text="${empleado.sexo}"></td>
+										<td th:text="${empleado.salario}"></td>
+										<td><a class="btn btn-info btn-sm"
+											th:href="@{/ver7/} + ${empleado.id}">Detalles</a></td>
+										<td sec:authorize="hasRole('OPERADOR')"><a
+											class="btn btn-warning btn-sm"
+											th:href="@{/form7/} + ${empleado.id}">Editar</a></td>
+									<td sec:authorize="hasRole('OPERADOR')">	
+					  <a  th:onclick="return confirm('¿Estás seguro de eliminar este usuario? esta acción no se puede deshacer.');" 
+					  th:href="@{/eliminar7/{id}(id=${empleado.id})}" class="btn btn-danger">Eliminar</a>
+					  </td>
+									
+									</tr>
+								</tbody>
+							</table>
+							
+							<nav th:replace="paginator-nav :: paginator"></nav>
 						</div>
-
-					</div>
 					</div>
 				</div>
-
-				 	
-					</div>
-				</div>
-					</div>
+			</div>
 				</div>
 	</section>
 
@@ -129,4 +147,6 @@ sidebarBtn.onclick = function() {
 
 </body>
 </html>
+
+
 
