--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,8 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
-	<link rel="icon" href="../static/img/logo.ico" th:href="@{logo}">
+	<!-- Codigo de icono en pestaña -->
+<link rel="icon" type="image/x-icon" href="assets/diam.ico"/>
 </head>
 <body>
 	<header th:fragment="header">
